--- a/activities/investment-odyssey/css/header-styles.css
+++ b/activities/investment-odyssey/css/header-styles.css
@@ -92,6 +92,13 @@
 .user-name {
     margin-right: 0.5rem;
     font-weight: 500;
+    color: white;
+    text-decoration: none;
+}
+
+.user-name:hover {
+    color: rgba(255,255,255,0.9);
+    text-decoration: underline;
 }
 
 .sign-out-btn {
